deploy/k8s/single/11-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: yuxi
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: http
