deploy/k8s/single/16-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: yuxi
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 5050
      targetPort: http
