deploy/k8s/single/23-api-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport
  namespace: yuxi
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      port: 5050
      targetPort: http
      nodePort: 30050
