deploy/k8s/single/30-etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: yuxi
spec:
  type: ClusterIP
  selector:
    app: etcd
  ports:
    - name: client
      port: 2379
      targetPort: client
