deploy/k8s/single/32-milvus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: milvus
  namespace: yuxi
spec:
  type: ClusterIP
  selector:
    app: milvus
  ports:
    - name: milvus
      port: 19530
      targetPort: milvus
    - name: health
      port: 9091
      targetPort: health
